[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/GrappleTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/coin_atlastexture.tres" type="Texture" id=2]
[ext_resource path="res://UI/TopCoins.gd" type="Script" id=3]

[node name="TopCoins" type="Node2D" groups=["hide_on_play"]]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
margin_right = 660.0
margin_bottom = 40.0

[node name="lblCoins" type="Label" parent="CanvasLayer/MarginContainer"]
margin_top = 1.0
margin_right = 660.0
margin_bottom = 39.0
theme = ExtResource( 1 )
text = "1,742"
align = 2

[node name="Sprite" type="Sprite" parent="CanvasLayer/MarginContainer"]
position = Vector2( 683, 19 )
scale = Vector2( 0.515625, 0.515625 )
texture = ExtResource( 2 )

[node name="TextScrambleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="TextScrambleTimer" to="." method="_on_TextAnimationTimer_timeout"]
